--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <a href="#"
                             class="d-flex align-items-center link-body-emphasis text-decoration-none dropdown-toggle"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            <img src="/assets/patient.png/mdo.png" alt="" width="32" height="32"
+                            <img src="./assets/patient.png/mdo.png" alt="" width="32" height="32"
                                 class="rounded-circle me-2">
                             <strong>Lalit Kasana</strong>
                         </a>
@@ -303,49 +303,49 @@
                                                     <td>1</td>
                                                     <td>Aarav Sharma</td>
                                                     <td>P001</td>
-                                                    <td><img src="/assets/patient.png" alt="Aarav Sharma" width="50" height="50"></td>
+                                                    <td><img src="./assets/patient.png" alt="Aarav Sharma" width="50" height="50"></td>
                                                 </tr>
                                                 <tr>
                                                     <td>2</td>
                                                     <td>Vihaan Patel</td>
                                                     <td>P002</td>
-                                                    <td><img src="/assets/patient.png" alt="Vihaan Patel" width="50" height="50"></td>
+                                                    <td><img src="./assets/patient.png" alt="Vihaan Patel" width="50" height="50"></td>
                                                 </tr>
                                                 <tr>
                                                     <td>3</td>
                                                     <td>Aditya Singh</td>
                                                     <td>P003</td>
-                                                    <td><img src="/assets/patient.png" alt="Aditya Singh" width="50" height="50"></td>
+                                                    <td><img src="./assets/patient.png" alt="Aditya Singh" width="50" height="50"></td>
                                                 </tr>
                                                 <tr>
                                                     <td>4</td>
                                                     <td>Arjun Reddy</td>
                                                     <td>P004</td>
-                                                    <td><img src="/assets/patient.png" alt="Arjun Reddy" width="50" height="50"></td>
+                                                    <td><img src="./assets/patient.png" alt="Arjun Reddy" width="50" height="50"></td>
                                                 </tr>
                                                 <tr>
                                                     <td>5</td>
                                                     <td>Vivaan Gupta</td>
                                                     <td>P005</td>
-                                                    <td><img src="/assets/patient.png" alt="Vivaan Gupta" width="50" height="50"></td>
+                                                    <td><img src="./assets/patient.png" alt="Vivaan Gupta" width="50" height="50"></td>
                                                 </tr>
                                                 <tr>
                                                     <td>6</td>
                                                     <td>Rajesh Kumar</td>
                                                     <td>P006</td>
-                                                    <td><img src="/assets/patient.png" alt="Rajesh Kumar" width="50" height="50"></td>
+                                                    <td><img src="./assets/patient.png" alt="Rajesh Kumar" width="50" height="50"></td>
                                                 </tr>
                                                 <tr>
                                                     <td>7</td>
                                                     <td>Arnav Bhatia</td>
                                                     <td>P007</td>
-                                                    <td><img src="/assets/patient.png" alt="Arnav Bhatia" width="50" height="50"></td>
+                                                    <td><img src="./assets/patient.png" alt="Arnav Bhatia" width="50" height="50"></td>
                                                 </tr>
                                                 <tr>
                                                     <td>8</td>
                                                     <td>Dhruv Sinha</td>
                                                     <td>P010</td>
-                                                    <td><img src="/assets/patient.png" alt="Dhruv Sinha" width="50" height="50"></td>
+                                                    <td><img src="./assets/patient.png" alt="Dhruv Sinha" width="50" height="50"></td>
                                                 </tr>
                                             </thead>
                                             <tbody id="active-patients">
@@ -382,13 +382,13 @@
                                                     <td>1</td>
                                                     <td>Rohan Mehta</td>
                                                     <td>P008</td>
-                                                    <td><img src="/assets/patient.png" alt="Rohan Mehta" width="50" height="50"></td>
+                                                    <td><img src="./assets/patient.png" alt="Rohan Mehta" width="50" height="50"></td>
                                                 </tr>
                                                 <tr>
                                                     <td>2</td>
                                                     <td>Reyansh Desai</td>
                                                     <td>P009</td>
-                                                    <td><img src="/assets/patient.png" alt="Reyansh Desai" width="50" height="50"></td>
+                                                    <td><img src="./assets/patient.png" alt="Reyansh Desai" width="50" height="50"></td>
                                                 </tr>
                                             </thead>
                                             <tbody id="warn-patients">
@@ -425,19 +425,19 @@
                                                     <td>1</td>
                                                     <td>Ritu Choudhury</td>
                                                     <td>P011</td>
-                                                    <td><img src="/assets/patient.png" class="img-thumbnail" width="50"></td>
+                                                    <td><img src="./assets/patient.png" class="img-thumbnail" width="50"></td>
                                                 </tr>
                                                 <tr>
                                                     <td>2</td>
                                                     <td>Arvind Joshi</td>
                                                     <td>P012</td>
-                                                    <td><img src="/assets/patient.png" class="img-thumbnail" width="50"></td>
+                                                    <td><img src="./assets/patient.png" class="img-thumbnail" width="50"></td>
                                                 </tr>
                                                 <tr>
                                                     <td>3</td>
                                                     <td>Rina Patel</td>
                                                     <td>P013</td>
-                                                    <td><img src="/assets/patient.png" class="img-thumbnail" width="50"></td>
+                                                    <td><img src="./assets/patient.png" class="img-thumbnail" width="50"></td>
                                                 </tr>
                                             </thead>
                                             <tbody id="closed-patients">
