--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                                         <button class="btn btn-warning btn-block" type="button"
                                             data-bs-toggle="collapse" data-bs-target="#collapseTwo"
                                             aria-expanded="false" aria-controls="collapseTwo">
-                                            Patients with Warnings
+                                            Withdrawals
                                         </button>
                                     </h5>
                                 </div>
