--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <a href="#"
                             class="d-flex align-items-center link-body-emphasis text-decoration-none dropdown-toggle"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            <img src="./assets/patient.png/mdo.png" alt="" width="32" height="32"
+                            <img src="./assets/patient.png" alt="" width="32" height="32"
                                 class="rounded-circle me-2">
                             <strong>Lalit Kasana</strong>
                         </a>
