supervisor functionality added.

--- a/index.html
+++ b/index.html
@@ -450,6 +450,117 @@
                         </div>
                     </div>
                 </patients>
+
+                <supervisor>
+                    <div class="container mt-4">
+                        <div class="supervisor row">
+                            <!-- Supervisor Profile -->
+                            <div class="col-md-3">
+                                <img src="./assets/patient.png" alt="Supervisor Photo" class="img-fluid rounded-circle" width="100" height="100">
+                            </div>
+                            <div class="col-md-9">
+                                <h3>Dr. Ramesh Kumar</h3>
+                                <p><strong>Age:</strong> 45</p>
+                                <p><strong>Qualifications:</strong> MBBS, MD (Internal Medicine)</p>
+                                <p><strong>Years of Experience:</strong> 20</p>
+                            </div>
+                        </div>
+                
+                        <!-- Open Submitted Work -->
+                        <div class="mt-4">
+                            <h4 class = "open">Open Submitted Work</h4>
+                            <table id="open-work-table" class="table table-striped">
+                                <thead>
+                                    <tr>
+                                        <th>S.No.</th>
+                                        <th>PDFs</th>
+                                        <th>Patient Name</th>
+                                        <th>Type of Report</th>
+                                        <th>Submitted On</th>
+                                        <th>Comments from Supervisor</th>
+                                        <th>Done</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>1</td>
+                                        <td><a href="path/to/report1.pdf" target="_blank">Report 1</a></td>
+                                        <td>Aarav Sharma</td>
+                                        <td>Progress Report</td>
+                                        <td>03-09-2024</td>
+                                        <td>Seems like the patient is healing. Good work.</td>
+                                        <td><input type="checkbox" name="done1"></td>
+                                    </tr>
+                                    <tr>
+                                        <td>2</td>
+                                        <td><a href="path/to/report2.pdf" target="_blank">Report 2</a></td>
+                                        <td>Vihaan Patel</td>
+                                        <td>Prescription</td>
+                                        <td>02-09-2024</td>
+                                        <td>Patient is allergic to thymiol. Change the medicines.</td>
+                                        <td><input type="checkbox" name="done2"></td>
+                                    </tr>
+                                    <tr>
+                                        <td>3</td>
+                                        <td><a href="path/to/report3.pdf" target="_blank">Report 3</a></td>
+                                        <td>Aditya Singh</td>
+                                        <td>Prescription</td>
+                                        <td>01-09-2024</td>
+                                        <td>Ambiguity in exercises. Write and prescribe again.</td>
+                                        <td><input type="checkbox" name="done3"></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                
+                        <!-- Closed Submitted Work -->
+                        <div class="mt-4">
+                            <h4 class = "closed">Closed Submitted Work</h4>
+                            <table id="closed-work-table" class="table table-striped">
+                                <thead>
+                                    <tr>
+                                        <th>S.No.</th>
+                                        <th>PDFs</th>
+                                        <th>Patient Name</th>
+                                        <th>Type of Report</th>
+                                        <th>Submitted On</th>
+                                        <th>Comments from Supervisor</th>
+                                        <th>Done</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>1</td>
+                                        <td><a href="path/to/closed-report1.pdf" target="_blank">Closed Report 1</a></td>
+                                        <td>Aditya Singh</td>
+                                        <td>Prescription</td>
+                                        <td>10-09-2024</td>
+                                        <td>Good work. Next time suggest them vocal healing medicines twice a day.</td>
+                                        <td><input type="checkbox" name="closed-done1" checked></td>
+                                    </tr>
+                                    <tr>
+                                        <td>2</td>
+                                        <td><a href="path/to/closed-report2.pdf" target="_blank">Closed Report 2</a></td>
+                                        <td>Rohan Mehta</td>
+                                        <td>Progress Report</td>
+                                        <td>16-08-2024</td>
+                                        <td>Minor anomalies, have a 1:1 with the patient.</td>
+                                        <td><input type="checkbox" name="closed-done2" checked></td>
+                                    </tr>
+                                    <tr>
+                                        <td>3</td>
+                                        <td><a href="path/to/closed-report3.pdf" target="_blank">Closed Report 3</a></td>
+                                        <td>Vivaan Gupta</td>
+                                        <td>Prescription</td>
+                                        <td>17-08-2024</td>
+                                        <td>All okay.</td>
+                                        <td><input type="checkbox" name="closed-done3" checked></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </supervisor>                
             </div>
 
         </div>
