comments analysis added.

--- a/index.html
+++ b/index.html
@@ -560,6 +560,10 @@
                             </table>
                         </div>
                     </div>
+                    <div class = "graph">
+                        <h4 class = "open">Comments Analysis</h4>
+                        <img src="./assets/graph.png" height="300">
+                    </div>
                 </supervisor>                
             </div>
 
