Connect patient page to Name

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                                                 </tr>
                                                 <tr>
                                                     <td>1</td>
-                                                    <td>Aarav Sharma</td>
+                                                    <td><a href="patient1/patient1.html" target="_blank">Aarav Sharma</a></td>
                                                     <td>P001</td>
                                                     <td><img src="./assets/patient.png" alt="Aarav Sharma" width="50" height="50"></td>
                                                 </tr>
