change name in patient page

--- a/patient1/patient1.html
+++ b/patient1/patient1.html
@@ -18,7 +18,7 @@
       </div>
 
       <div class="patient-details">
-        <p><strong>Name:</strong> Vishwas </p>
+        <p><strong>Name:</strong> Aarav Sharma </p>
         <p><strong>Age:</strong> 45</p>
         <p><strong>Address:</strong> 0765, Noida, India</p>
         <p><strong>Cause of Disability:</strong> Traumatic brain injury (TBI)</p>
