change path to prescription.pdf

--- a/patient1/patient1.html
+++ b/patient1/patient1.html
@@ -50,11 +50,11 @@
         <p>Patient Prescriptions</p>
       </div>
       <div class="cards">
-        <a href="prescription.pdf" target="_blank" class="card">
+        <a href="assets/prescription.pdf" target="_blank" class="card">
           <p class="date">08/08/2024</p>
           <p class="desc">Prescription Details</p>
         </a>
-        <a href="prescription.pdf" target="_blank" class="card">
+        <a href="assets/prescription.pdf" target="_blank" class="card">
           <p class="date">08/07/2024</p>
           <p class="desc">Prescription Details</p>
         </a>
@@ -71,7 +71,7 @@
         <p>Progress Reports</p>
       </div>
       <div class="cards">
-        <a href="report1.pdf" target="_blank" class="card">
+        <a href="assets/prescription.pdf" target="_blank" class="card">
           <p class="date">July - Aug 2024</p>
           <p class="desc">Progress Report</p>
         </a>
